spacing issue

--- a/src/pages/operator/css/Operator.css
+++ b/src/pages/operator/css/Operator.css
@@ -126,7 +126,7 @@
     column-gap: 10px;
     justify-content: center;
     padding-top: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 #operator-body {
